# CSV-Parser-Analytics

./: CMakeLists.txt  Guidelines for the Term Project.docx  README.md  main.cpp  main2.cpp  mainMenu.h  printFunction.h  temp.h
CSV/: csv.h
DataStructures/: AVLAgency.h  AVLAgent.h  AVLOwner.h  AVLOwnerSortAgency.h  AVLProperty.h  AVLSortByDate.h  HashTable.h  HashTableAVL.h  Include.h
Functions/: Functions.h
Models/: City.h  Location.h  Owner.h  Property.h  PropertyType.h  Province.h  Purpose.h
